--- a/Coding Club but sigma/MDE Project/index.html
+++ b/Coding Club but sigma/MDE Project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Em di ia project</title>
+    <title>AP Education</title>
 </head>
 <body style="font-size: 18px; font-family: Cursive;">
     <div>
