--- a/Coding Club but sigma/MDE Project/index.html
+++ b/Coding Club but sigma/MDE Project/index.html
@@ -3,51 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="Resources/sources.txt" as="fetch">
     <title>AP Education</title>
 </head>
-<body style="font-size: 18px; font-family: Cursive;">
-    <div>
-        <h1>AP Education</h1>
-        <h3>AP Education is dedicated to people who need help in study!</h3>
+<body style="font-size: 18px; font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
+    <div style="background-color: #33424D; margin-top: -.7cm; height: 150px; color: white">
+       <h1 style="font-family: Atma, cursive, serif; top: 8px; left: 5%; position: absolute;">AP Education</h1>
+       <h2 style="top: 15px; right: 20%; position: absolute;">Learn now!</h2>
+       <h2 style="top: 15px; right: 5%; position: absolute; text-decoration: line-through;">Account</h2>
     </div>
-    <div>
-        <h4>There are many people in this world who can't afford education.</h4>
-        <h2>So we are here to help them. It's completely free!</h2>
+    <div style="background-image: url(Resources/img/playground.jpg); background-size:cover;">
+        <div style="width: 70%; margin-left: auto; margin-right: auto; background-color: #FFF3E099;
+                    text-align: center; font-size: 50px; border: solid 3px; border-radius: 15px;
+                    transform: translateY(100px); margin-bottom: 120px; font-family: Atma, cursive, serif;">
+            <h1>AP Education</h1>
+            <h3>AP Education is dedicated to people who need help in study!</h3>
+        </div>
+        <div style="text-align: center; font-size: 40px; padding-bottom: 1cm; text-shadow:  
+        -1px -1px 8px white,  
+        1px -1px 8px white,  
+        -1px 1px 8px white,  
+        1px 1px 8px white;  ">
+            <h4>There are many people in this world who <mark style="background-color: lightsalmon;">can't afford</mark> education.</h4>
+            <h2>So we are here to help them. It's completely free!</h2>
+        </div>
     </div>
-    <div>
-        <h2>Many subjects and articles waiting for you!</h2>
-        <a><h4>Math</h4></a>
-        <a><h4>Science</h4></a>
-        <a><h4>English</h4></a>
-        <a><h4>Show more</h4></a>
+    <div style="width: 70%; margin-left: auto; margin-right: auto; background-color: #FFF3E0;
+    text-align: center; font-size: 40px; border: solid 3px; border-radius: 15px;
+    margin-top: 3cm;">
+        <h2 style="font-family: Atma, cursive, serif;">Many subjects and articles waiting for you!</h2>
+        <div style="display: grid; grid-template-columns: auto auto;">
+            <a><h4>Math</h4></a>
+            <a><h4 style="text-decoration: line-through;">Science</h4></a>
+            <a><h4 style="text-decoration: line-through;">English</h4></a>
+            <a><h4 style="text-decoration: line-through;">Show more</h4></a>
+        </div>
     </div>
-    <div style="width: 40cm; margin-left: auto; margin-right: auto;">
+    <div style="width: 85%; margin-left: auto; margin-right: auto;">
         <h2 style="font-size: 60px; text-align: center;">Lets see what our users have to say!</h2>
         <div style="display: flex; background-color: cornflowerblue; border: solid 3px; border-radius: 5px">
             <img src="Resources/img/imgCustomer1.jpg" style="width: 30%; max-width: 5cm; object-fit: cover; padding: 10px; justify-content: space-between;" />
-            <h2>
+            <h2 style="padding: 10px; justify-content: space-between;">
                 Our family was struggling for my child's education. Many websites needs a subscription for their proper educating system, but this one is an exception. We have been using AP Education for 4 years now and my child just graduated Elementary all thanks to AP Education!
             </h2>
         </div>
         <h3 style="text-align: right">Alberto Duncan - Parent</h3>
         <div style="display: flex; background-color: lightcoral; border: solid 3px; border-radius: 5px">
-            <img src="Resources/customer-2.jpg" style="width: 30%" />
-            <h2>
-                AP Education is helping my lessons fun and engaging for my students. I not only see their happiness while learning with AP Education but their grades have also improved a lot so far. We teachers had never ever regret letting our students use AP Education!
+            <img src="Resources/img/imgCustomer2.jpg" style="width: 30%; max-width: 5cm; object-fit: cover; padding: 10px; justify-content: space-between;" />
+            <h2 style="padding: 10px; justify-content: space-between;">
+                AP Education is helping my lessons fun and engaging for my students. I not only see their happiness while learning with AP Education but their grades also have improved a lot so far. We teachers had never ever regret letting our students use AP Education!
             </h2>
         </div>
-        <h3 style="text-align: right">Joana Silva</h3>
+        <h3 style="text-align: right">Joana Silva - Teacher</h3>
         <div style="display: flex; background-color: greenyellow; border: solid 3px; border-radius: 5px">
-            <img src="Resources/customer-3.jpg" style="width: 30%" />
+            <img src="Resources/img/imgCustomer3.jpg" style="width: 30%; max-width: 5cm; object-fit: cover; padding: 10px; justify-content: space-between;" />
+            <h2 style="padding: 10px; justify-content: space-between;">
             <h2>
-                I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+                My grades have improved by a lot after using AP Education! Us students don't only learn here, we even battle our knowledge using AP Quiz!
             </h2>
         </div>
+        <h3 style="text-align: right">Milton Chapman - Student</h3>
     </div>
-    <div>
-        <h2>Sign up to start your gamified adventure!</h2>
-        <button>Sign up</button>
-        <button>Log in</button>
+    <div style="width: 70%; margin-left: auto; margin-right: auto; background-color: #FFF3E0;
+    text-align: center; font-size: 50px; border: solid 3px; border-radius: 15px;
+    transform: translateY(100px); margin-bottom: 120px; font-family: Atma, cursive, serif;">
+        <h2>Sign up to track your progess and start your gamified adventure!</h2>
+        <div>
+            <button style="width: 20%; height: 7%; background-color: lightcoral;
+            text-align: center; font-size: 50px; border: solid 3px black; border-radius: 15px;
+            font-family: Atma, cursive, serif; margin-bottom: 1cm; text-decoration: line-through;">Sign up</button>
+            <button style="width: 20%; height: 7%; background-color: springgreen;
+            text-align: center; font-size: 50px; border: solid 3px black; border-radius: 15px;
+            font-family: Atma, cursive, serif; margin-bottom: 1cm; text-decoration: line-through;">Log in</button>
+        </div>
     </div>
+    <div style="background-color: #33424D; height: 250px; color: white; margin-left: auto;
+    margin-right: auto; transform: translateY(100px); display: flex; justify-content: space-between; align-items: center;">
+        <h1 style="font-family: Atma, cursive, serif; margin-left: 50px;">AP Education</h1>
+        <div>
+            <h5 style="text-align: right; padding-right: 40px;">This website is for MDE Project, no business included!</h5>
+            <h5 style="text-align: right; padding-right: 40px;">User responses are not real.</h5>
+            <h5 style="text-align: right; padding-right: 40px;">Check DevTools Network, record activity and find sources.txt to see sources!</h5>
+            <h5 style="text-align: right; padding-right: 40px;">Created by Anh Phong :D</h5>
+        </div>
+     </div>
 </body>
 </html>
