--- a/Coding Club but sigma/MDE Project/index.html
+++ b/Coding Club but sigma/MDE Project/index.html
@@ -36,7 +36,7 @@
     margin-top: 3cm;">
         <h2 style="font-family: Atma, cursive, serif;">Many subjects and articles waiting for you!</h2>
         <div style="display: grid; grid-template-columns: auto auto;">
-            <a><h4>Math</h4></a>
+            <a href="math"><h4>Math</h4></a>
             <a><h4 style="text-decoration: line-through;">Science</h4></a>
             <a><h4 style="text-decoration: line-through;">English</h4></a>
             <a><h4 style="text-decoration: line-through;">Show more</h4></a>
@@ -62,7 +62,7 @@
             <img src="Resources/img/imgCustomer3.jpg" style="width: 30%; max-width: 5cm; object-fit: cover; padding: 10px; justify-content: space-between;" />
             <h2 style="padding: 10px; justify-content: space-between;">
             <h2>
-                My grades have improved by a lot after using AP Education! Us students don't only learn here, we even battle our knowledge using AP Quiz!
+                My grades have improved by a lot after using AP Education! Me and my friends don't only learn here, we even battle our knowledge using AP Quiz!
             </h2>
         </div>
         <h3 style="text-align: right">Milton Chapman - Student</h3>
