quiz and article loader update

--- a/Coding Club but sigma/MDE Project/index.html
+++ b/Coding Club but sigma/MDE Project/index.html
@@ -6,10 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="preload" href="Resources/sources.txt" as="fetch">
     <title>AP Education</title>
 </head>
-<body style="font-size: 18px; font-family: cursive, serif; font-size: 20px; background-color: #F1F1F1;">
+<body style="font-family: cursive, serif; font-size: 20px; background-color: #F1F1F1;">
     <div style="background-color: #33424D; margin-top: -.7cm; height: 150px; color: white">
        <h1 style="font-family: Atma, cursive, serif; top: 8px; left: 5%; position: absolute;">AP Education</h1>
        <h2 style="top: 15px; right: 20%; position: absolute; text-decoration: underline;" onclick="document.querySelector('#articles').scrollIntoView({behavior: 'smooth'}, true)">Learn now!</h2>
@@ -86,7 +85,7 @@
         <div>
             <h5 style="text-align: right; padding-right: 40px;">This website is for MDE Project, no business included!</h5>
             <h5 style="text-align: right; padding-right: 40px;">User responses are not real.</h5>
-            <h5 style="text-align: right; padding-right: 40px;">Check DevTools Network, record activity and find sources.txt to see sources!</h5>
+            <h5 style="text-align: right; padding-right: 40px;"><a href="article-loader" style="color: white;">Category loader</a> - Type "dev-tools" for sources and change log</h5>
             <h5 style="text-align: right; padding-right: 40px;">Created by Anh Phong :D</h5>
         </div>
      </div>
