--- a/Coding Club but sigma/MDE Project/math/index.html
+++ b/Coding Club but sigma/MDE Project/math/index.html
@@ -6,30 +6,28 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>AP Education</title>
+    <title>AP Education - Math</title>
 </head>
-<body style="font-size: 18px; font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
+<body style="font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
     <style> #category > h2:hover {color:blue;} #list > * {color: black;} #list > * :hover {color:blue;}</style>
     <div style="background-color: #33424D; margin-top: -.7cm; height: 150px; color: white">
         <a href="../" style="color: white;"><h1 style="font-family: Atma, cursive, serif; top: 8px; left: 5%; position: absolute;">AP Education</h1></a>
         <h2 style="top: 15px; right: 5%; position: absolute; text-decoration: line-through;">Account</h2>
      </div>
      <div style="display: flex; justify-content: space-between; align-items: center; width: 90%; margin-left: auto; margin-right: auto;">
-        <div id="category" style="width: 20%;">
-            <h1>Grades</h1>
-            <h2 id="k-g1" onclick="list(1)" style="text-decoration: underline;">K and G1</h2>
+        <div id="category" style="width: 20%; background-color: white; border-radius: 15px; margin-top: 40px;">
+            <h1 style="padding-left: 20px;">Grades</h1>
+            <h2 id="k-g1" onclick="showArticles('math-k&g1')" style="text-decoration: underline; padding-left: 20px;">K and G1</h2>
         </div>
-        <div id="list" style="text-align: center; width: 70%; background-color: white; border-radius: 15px;">
+        <div id="list" style="text-align: center; width: 70%; background-color: white; border-radius: 15px; margin-top: 40px;">
 
         </div>
      </div>
 </body>
-<script>
-    function list(num) {
-        if (num == 1) {
-            document.querySelector("#list").innerHTML = ""
-            document.querySelector("#list").innerHTML += "<a href='K-and-G1/numbers'><h3>Numbers</h3></a>"
-            document.querySelector("#list").innerHTML += "<a href='K-and-G1/addition-and-subtraction'><h3>Addition and Subtraction</h3></a>"
-        }
+<script type="module">
+    import { loader } from "../article-loader/loader.js"
+    function showArticles(article) {
+        loader(article, '#list')
     }
+    window.showArticles = showArticles
 </script>
