--- a/Coding Club but sigma/MDE Project/math/k-and-G1/addition-and-subtraction/index.html
+++ b/Coding Club but sigma/MDE Project/math/k-and-G1/addition-and-subtraction/index.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>AP Education</title>
+    <title>AP Education - Addition and Subtraction</title>
 </head>
-<body style="font-size: 18px; font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
+<body style="font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
     <style>img {width: 40%; margin-left: auto; display:block; margin-right: auto; padding-bottom: 1cm;}</style>
     <div style="background-color: #33424D; margin-top: -.7cm; height: 150px; color: white">
         <a href="../../../" style="color: white;"><h1 style="font-family: Atma, cursive, serif; top: 8px; left: 5%; position: absolute;">AP Education</h1></a>
@@ -22,5 +22,7 @@
         <h2><u style="color:red">Subtract</u>ion is the removal of the first number value by the second number value to get the <u>difference</u> value.</h2>
         <h2>When subtracting, numbers are seperated with a <u>minus</u> (-) sign and the result of the subtraction would also have the equal (=) sign:</h2>
         <img src="../../../Resources/img/addition and subtraction/subtraction.png">
+        <h2>You can also combine additions or subtractions together or mix them to get an answer value!</h2>
+        <img src="../../../Resources/img/addition and subtraction/special addition & subtraction.png">
      </div>
 </body>
