--- a/Coding Club but sigma/MDE Project/math/k-and-G1/numbers/index.html
+++ b/Coding Club but sigma/MDE Project/math/k-and-G1/numbers/index.html
@@ -6,9 +6,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>AP Education</title>
+    <title>AP Education - Numbers</title>
 </head>
-<body style="font-size: 18px; font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
+<body style="font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
     <style>img {width: 40%; margin-left: auto; display:block; margin-right: auto; padding-bottom: 1cm;}</style>
     <div style="background-color: #33424D; margin-top: -.7cm; height: 150px; color: white">
         <a href="../../../" style="color: white;"><h1 style="font-family: Atma, cursive, serif; top: 8px; left: 5%; position: absolute;">AP Education</h1></a>
@@ -25,7 +25,7 @@
         <img src="../../../Resources/img/numbers/4 apples.png">
         <img src="../../../Resources/img/numbers/5 oranges.png">
         <img src="../../../Resources/img/numbers/6 oranges.png">
-        <img src="../../Resources/img/numbers/7 oranges.png">
+        <img src="../../../Resources/img/numbers/7 oranges.png">
         <img src="../../../Resources/img/numbers/8 oranges.png">
         <img src="../../../Resources/img/numbers/9 grapes.png">
         <img src="../../../Resources/img/numbers/10 grapes.png">
