--- a/Coding Club but sigma/MDE Project/dev-tools/changelog.html
+++ b/Coding Club but sigma/MDE Project/dev-tools/changelog.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>AP Education - Sources</title>
+    <title>AP Education - Change log</title>
 </head>
 <body style="font-family: cursive, serif; font-size: 20px; background-color: #E3F2FD;">
     <style>img {width: 40%; margin-left: auto; display:block; margin-right: auto; padding-bottom: 1cm;}</style>
